syntax = "proto3";

package configure.api.configure.server.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "configure.api.configure.server.v1";
option java_outer_classname = "ServerV1";

import "validate/validate.proto";

message CreateServerRequest {
  string keyword = 1[(validate.rules).string = {min_len: 1}];
  string name = 2[(validate.rules).string = {min_len: 1}];
  optional string description = 3;
  optional bool status = 4;
}

message CreateServerReply {
  uint32 id = 1;
}