syntax = "proto3";

package configure.api.configure.server.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "configure.api.configure.server.v1";
option java_outer_classname = "ServerV1";

import "api/configure/server/configure_server.proto";
import "google/api/annotations.proto";

service Server {
  rpc CreateServer (CreateServerRequest) returns (CreateServerReply) {
    option (google.api.http) = {
      post: "/configure/api/v1/server",
      body: "*"
    };
  }
}

